# ChangeLog for mail-client/ximian-connector
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/ximian-connector/ChangeLog,v 1.18 2005/06/05 16:30:25 foser Exp $

*ximian-connector-2.2.3 (05 Jun 2005)

  05 Jun 2005; Marinus Schraal <foser@gentoo.org> ximian-connector-2.2.3.ebuild :
  New release (#91100 )

  14 Feb 2005; Joe McCann <joem@gentoo.org>
  ximian-connector-1.2.2_p1.ebuild, ximian-connector-1.4.7.2.ebuild,
  ximian-connector-2.0.2-r1.ebuild, ximian-connector-2.0.2.ebuild:
  update homepage, closes bug 77150

  07 Feb 2005; Simon Stelling <blubb@gentoo.org>
  ximian-connector-2.0.2-r1.ebuild:
  added ~amd64

*ximian-connector-2.0.2-r1 (03 Dec 2004)

  03 Dec 2004; Alastair Tse <liquidx@gentoo.org>
  +files/2.0.2-exchange_auth.patch, +ximian-connector-2.0.2-r1.ebuild:
  added patch for authentication problems under exchange 2003 (#69191)

  30 Nov 2004; Mike Gardiner <obz@gentoo.org>
  ximian-connector-1.2.2_p1.ebuild:
  Removed pkg_setup() function, KEYWORDS covers that. Remove sed in global
  scope for bash regex. Fixed SRC_URI to be cache-friendly, test for arch? (
  get arch.rpm )

  22 Oct 2004; Alastair Tse <liquidx@gentoo.org>
  ximian-connector-1.4.7.2.ebuild, ximian-connector-2.0.0.ebuild,
  ximian-connector-2.0.1.ebuild, ximian-connector-2.0.2.ebuild:
  replaced mit-krb5 with virtual/krb5 (#68523)

*ximian-connector-2.0.2 (16 Oct 2004)

  16 Oct 2004; Alastair Tse <liquidx@gentoo.org>
  -ximian-connector-1.4.6.0.6.1.ebuild, +ximian-connector-2.0.2.ebuild:
  version bump

*ximian-connector-2.0.1 (05 Oct 2004)

  05 Oct 2004; Alastair Tse <liquidx@gentoo.org>
  +files/ximian-connector-2.0.1-exchange2003.patch,
  +ximian-connector-2.0.1.ebuild:
  added exchange 2003 sp1 patch for 2.0.1 -- 1.4.7 has the same issue, but we
  still need verification. (#66285) thanks to Andreas Proschofsky
  <suka@gentoo.org>

  28 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>