@@ -1,10 +1,10 @@
 MD5 6baac6d01c900654c84f3e8db645604b ximian-connector-1.4.7.2.ebuild 975
 MD5 864130643c99865050814b3bdeef3690 ximian-connector-1.2.2_p1.ebuild 1875
 MD5 ec4c988dd763dd59243fc46e4476ea79 ximian-connector-2.0.2.ebuild 924
-MD5 167e4181a4c5620e32b5f7d22f84df2b ximian-connector-2.2.3.ebuild 944
+MD5 acc57b017d088463a9b480fc292b85b4 ximian-connector-2.2.3.ebuild 947
 MD5 18cbd0b13ff3f5c9eb267d62046f8e13 ximian-connector-2.0.2-r1.ebuild 1021
-MD5 633c5b2ef00d21f534411852fff1b052 ChangeLog 7058
-MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 7563a23c6eb06234a28b08edd614b91c ChangeLog 7184
+MD5 f4713bbf77ae895c7ff6c022a7a2f542 metadata.xml 222
 MD5 c54395967f9527952a219a01253770c9 files/ximian-connector-2.0.1-exchange2003.patch 625
 MD5 9dfb89cf8aa1ed2f2530cf73c0c6c478 files/digest-ximian-connector-1.2.2_p1 173
 MD5 9fb7d691f96995adaac16cfedf42b202 files/2.0.2-exchange_auth.patch 555
