@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>gnome</herd>
+<maintainer>
+	<email>allanonjl@gentoo.org</email>
+</maintainer>
 </pkgmetadata>
