@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/ximian-connector
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/ximian-connector/ChangeLog,v 1.18 2005/06/05 16:30:25 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/ximian-connector/ChangeLog,v 1.19 2005/06/16 13:36:10 allanonjl Exp $
+
+  16 Jun 2005; John N. Laliberte <allanonjl@gentoo.org> metadata.xml,
+  ximian-connector-2.2.3.ebuild:
+  mark x86 stable
 
 *ximian-connector-2.2.3 (05 Jun 2005)
 
